1999-08-16  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_dependencies): Generate `include's for
	dependency files after `@AMDEP@'.

	* m4/missing.m4: Use eval, instead of a sub-shell, to test for
	--run support in the missing script, since SHELL is not exported.
	Reported by job bogan <job@piquin.uchicago.edu>
	* aclocal.m4, configure: Rebuilt.

1999-08-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* aclocal.m4, configure: Rebuilt with itself.
	* Makefile.in, m4/Makefile.in, tests/Makefile.in: Likewise.

	* m4/missing.m4 (AM_MISSING_PROG): Remove DIRECTORY argument.
	Require AM_MISSING_HAS_RUN.  Use am_missing_run, defined by...
	(AM_MISSING_HAS_RUN): New macro.
	* m4/init.m4: Remove missing_dir from calls to AM_MISSING_PROG.
	* automake.texi (Requirements): Likewise.
	* version.texi, stamp-vti: Rebuilt.

1999-07-28  Tom Tromey  <tromey@cygnus.com>

	* depcomp: Handle the `hp' mode.

1999-07-06  Tom Tromey  <tromey@cygnus.com>

	* depcomp: Work around HP-UX 10.20 sed bug.

1999-07-05  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dependencies): Generate a separate include
	for each dep file.  Report from Alexandre Oliva.
	* depend.am: Don't include DEP_FILES.

1999-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* depend.am: Add @AMDEP@ before `include', so that dependency
	tracking can be disabled.
	* depend2.am: Ditto, before all lines related with dependency
	tracking.
	* m4/depend.m4 (AM_DEP_TRACK): New macro, that documents
	--enable/disable-dependency-tracking and sets AMDEP accordingly.
	It is implicitly disabled if depcomp is missing.
	(AM_DEPENDENCIES): Disable dependency tracking unless it can be
	generated by side-effect.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Require AM_DEP_TRACK.
	* automake.in (handle_dependencies): Add @AMDEP@ before the value
	of DEP_FILES.
	* m4/depout.m4 (AM_OUTPUT_DEPENDENCY_COMMANDS): Handle DEP_FILES
	starting with `#'.

	* depcomp: Support -xM for dependency generation, for Sun CC.