@@ -24,19 +24,19 @@
 @AMDEP@@FPFX@DEPMODE = @@FPFX@DEPMODE@
 
 @EXT@.o:
-@AMDEP@	source='$<' object='$@' \
-@AMDEP@	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' \
-@AMDEP@	$(@FPFX@DEPMODE) $(depcomp) \
+@AMDEP@	source='$<' object='$@' @AMDEPBACKSLASH@
+@AMDEP@	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' @AMDEPBACKSLASH@
+@AMDEP@	$(@FPFX@DEPMODE) $(depcomp) @AMDEPBACKSLASH@
 	$(@PFX@COMPILE) -c@MINUSO@ $<
 
 LIBTOOL@EXT@.lo:
-LIBTOOL@AMDEP@	source='$<' object='$@' \
-LIBTOOL@AMDEP@	depfile='$(DEPDIR)/$*.Plo' tmpdepfile='$(DEPDIR)/$*.TPlo' \
-LIBTOOL@AMDEP@	$(@FPFX@DEPMODE) $(depcomp) \
+LIBTOOL@AMDEP@	source='$<' object='$@' @AMDEPBACKSLASH@
+LIBTOOL@AMDEP@	depfile='$(DEPDIR)/$*.Plo' tmpdepfile='$(DEPDIR)/$*.TPlo' @AMDEPBACKSLASH@
+LIBTOOL@AMDEP@	$(@FPFX@DEPMODE) $(depcomp) @AMDEPBACKSLASH@
 LIBTOOL	$(LT@PFX@COMPILE) -c -o $@ $<
 
 OBJEXT@EXT@.obj:
-OBJEXT@AMDEP@	source='$<' object='$@' \
-OBJEXT@AMDEP@	depfile='$(DEPDIR)/$*.Pobj' tmpdepfile='$(DEPDIR)/$*.TPobj' \
-OBJEXT@AMDEP@	$(@FPFX@DEPMODE) $(depcomp) \
+OBJEXT@AMDEP@	source='$<' object='$@' @AMDEPBACKSLASH@
+OBJEXT@AMDEP@	depfile='$(DEPDIR)/$*.Pobj' tmpdepfile='$(DEPDIR)/$*.TPobj' @AMDEPBACKSLASH@
+OBJEXT@AMDEP@	$(@FPFX@DEPMODE) $(depcomp) @AMDEPBACKSLASH@
 OBJEXT	$(@PFX@COMPILE) -c@MINUSO@ `cygpath -w $<`
