@@ -1,5 +1,8 @@
 1999-08-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* m4/depend.m4 (AMDEPBACKSLASH): Define.
+	* depend2.am (@EXT@.o, @EXT@.lo, @EXT@.obj): Use AMDEPBACKSLASH.
+
 	* automake.in (handle_dependencies): Generate `include's for
 	dependency files after `@AMDEP@'.
 
